src/internal/codegen/snapshots/hebi__internal__codegen__tests__class_instance.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
class T: pass

T()


# Func:
function `main` (registers: 1, length: 8, constants: 2)
.code
  0 | make_class [0]; <class `T` descriptor>
  2 | store_global [1]; T
  4 | load_global [1]; T
  6 | call0
  7 | return



