src/internal/codegen/snapshots/hebi__internal__codegen__tests__empty_class_derived.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
class T(U): pass


# Func:
function `main` (registers: 1, length: 7, constants: 3)
.code
  0 | load_global [1]; U
  2 | make_class_derived [0]; <class `T` descriptor>
  4 | store_global [2]; T
  6 | return



